@@ -38,3 +38,9 @@ RepoIdConverter::participantId() const
 
 } // namespace
 } // namespace
+
+std::ostream&
+operator<<(std::ostream& os, const OpenDDS::DCPS::RepoIdConverter& rhs)
+{
+  return os << std::string(rhs);
+}
